# src/caretogether-pwa/src/Model/VolunteersModel.ts
@@ -61,7 +61,8 @@ export function useVolunteersModel() {
         _requirement: ActionRequirement,
         completedAtLocal: Date,
         documentId: string | null,
-        noteId: string | null
+        noteId: string | null,
+        roleName: string | null
       ) => {
         const command = commandFactory(CompleteVolunteerFamilyRequirement, {
           familyId: volunteerFamilyId,
@@ -70,6 +71,7 @@ export function useVolunteersModel() {
           completedAtUtc: completedAtLocal,
           uploadedDocumentId: documentId ?? undefined,
           noteId: noteId ?? undefined,
+          roleName: roleName ?? undefined,
         });
         return command;
       }
@@ -97,13 +99,15 @@ export function useVolunteersModel() {
         volunteerFamilyId,
         requirementName: string,
         additionalComments: string,
-        exemptionExpiresAtLocal: Date | null
+        exemptionExpiresAtLocal: Date | null,
+        roleName: string | null
       ) => {
         const command = commandFactory(ExemptVolunteerFamilyRequirement, {
           familyId: volunteerFamilyId,
           requirementName: requirementName,
           additionalComments: additionalComments,
           exemptionExpiresAtUtc: exemptionExpiresAtLocal ?? undefined,
+          roleName: roleName ?? undefined,
         });
         return command;
       }
@@ -165,7 +169,8 @@ export function useVolunteersModel() {
       _requirement: ActionRequirement,
       completedAtLocal: Date,
       documentId: string | null,
-      noteId: string | null
+      noteId: string | null,
+      roleName: string | null
     ) => {
       const command = commandFactory(CompleteVolunteerRequirement, {
         familyId: volunteerFamilyId,
@@ -175,6 +180,7 @@ export function useVolunteersModel() {
         completedAtUtc: completedAtLocal,
         uploadedDocumentId: documentId ?? undefined,
         noteId: noteId ?? undefined,
+        roleName: roleName ?? undefined,
       });
       return command;
     }
@@ -201,7 +207,8 @@ export function useVolunteersModel() {
       personId: string,
       requirementName: string,
       additionalComments: string,
-      exemptionExpiresAtLocal: Date | null
+      exemptionExpiresAtLocal: Date | null,
+      roleName: string | null
     ) => {
       const command = commandFactory(ExemptVolunteerRequirement, {
         familyId: volunteerFamilyId,
@@ -209,6 +216,7 @@ export function useVolunteersModel() {
         requirementName: requirementName,
         additionalComments: additionalComments,
         exemptionExpiresAtUtc: exemptionExpiresAtLocal ?? undefined,
+        roleName: roleName ?? undefined,
       });
       return command;
     }
