# swagger.json
@@ -4206,6 +4206,10 @@
             "type": "string",
             "format": "guid",
             "nullable": true
+          },
+          "roleName": {
+            "type": "string",
+            "nullable": true
           }
         }
       },
@@ -4241,6 +4245,10 @@
           "exemptionExpiresAtUtc": {
             "type": "string",
             "format": "date-time",
+            "nullable": true
+          },
+          "roleName": {
+            "type": "string",
             "nullable": true
           }
         }
@@ -7035,6 +7043,10 @@
                 "type": "string",
                 "format": "guid",
                 "nullable": true
+              },
+              "roleName": {
+                "type": "string",
+                "nullable": true
               }
             }
           }
@@ -7062,6 +7074,10 @@
               "exemptionExpiresAtUtc": {
                 "type": "string",
                 "format": "date-time",
+                "nullable": true
+              },
+              "roleName": {
+                "type": "string",
                 "nullable": true
               }
             }
@@ -7704,6 +7720,10 @@
                 "type": "string",
                 "format": "guid",
                 "nullable": true
+              },
+              "roleName": {
+                "type": "string",
+                "nullable": true
               }
             }
           }
@@ -7731,6 +7751,10 @@
               "exemptionExpiresAtUtc": {
                 "type": "string",
                 "format": "date-time",
+                "nullable": true
+              },
+              "roleName": {
+                "type": "string",
                 "nullable": true
               }
             }
